Began javascript implementation of asemica (perl) encryption

--- a/main/app/sprinkles/core/templates/pages/test.html.twig
+++ b/main/app/sprinkles/core/templates/pages/test.html.twig
@@ -1,3 +1,6 @@
+
+<script src="{{ assets.url('assets://SiteAssets/js/asemica.js') }}"></script>
+{#
 <form method="post" action="{{ site.uri.public }}/api/posts/image">
     {% include "forms/csrf.html.twig" %}
     <p>
@@ -35,3 +38,4 @@
         }
     });
 </script>
+#}
