Added upload feature in feed tab

--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -16,7 +16,7 @@
                     <div class="header">
                         <span class="LeftButtonHeader"><i class="fas fa-bars"></i></span>
                         <span class="HeaderCaption">{{ translate("TAB_CAPTIONS.FEED") }}</span>
-                        <span class="RightButtonHeader"><i class="fas fa-bell"></i></span>
+                        <span id="ImageUploadButton" class="RightButtonHeader"><i class="fas fa-upload"></i></span>
                     </div>
                     <hr>
                 </div>
