Optimized chat back button actions

--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -55,7 +55,7 @@
                 <div class="headerWrap">
                     <div class="header">
                         <span class="LeftButtonHeader"><i class="fas fa-bars"></i></span>
-                        <span class="HeaderCaption">{{ translate("TAB_CAPTIONS.CHAT") }}</span>
+                        <span class="HeaderCaption TabCaption">{{ translate("TAB_CAPTIONS.CHAT") }}</span>
                         <span class="RightButtonHeader"><i class="fas fa-bell"></i></span>
                     </div>
                     <hr class="ChatHeaderDivider">
