Improved searching query (added 'like wildcards')

--- a/main/app/sprinkles/core/templates/pages/index.html.twig
+++ b/main/app/sprinkles/core/templates/pages/index.html.twig
@@ -42,7 +42,7 @@
                            title="{{ translate("EXPLORE_TAB.USER_SEARCH_PH") }}"
                            placeholder="{{ translate("EXPLORE_TAB.USER_SEARCH_PH") }}">
                     <br>
-                    {#<div id="alerts-page"></div>#}
+                    <div id="alerts-page"></div>
                     <div class="SearchResults">
                     </div>
                     <div id="ExploreData">
