--- a/main/app/sprinkles/core/assets/SiteAssets/css/animate.css
+++ b/main/app/sprinkles/core/assets/SiteAssets/css/animate.css
@@ -3492,3 +3492,23 @@
     -webkit-animation-name: slideOutUp;
     animation-name: slideOutUp;
 }
+
+/* The typing effect */
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange
+    }
+}
