Rewritten admin interface webpack generation (had bugs before)

--- a/resources/assets/sass/admin.scss
+++ b/resources/assets/sass/admin.scss
@@ -1,5 +1,10 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~font-awesome/css/font-awesome.min.css";
-@import "~ionicons/dist/css/ionicons.min.css";
-@import "~adminlte/dist/css/AdminLTE.min.css";
-@import "~adminlte/dist/css/skins/skin-blue.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/bootstrap/dist/css/bootstrap.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/font-awesome/css/font-awesome.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/Ionicons/css/ionicons.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/dist/css/AdminLTE.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/dist/css/skins/_all-skins.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/morris.js/morris.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/jvectormap/jquery-jvectormap.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
+@import "../../../vendor/almasaeed2010/adminlte/bower_components/bootstrap-daterangepicker/daterangepicker.css";
+@import "../../../vendor/almasaeed2010/adminlte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css";
